- 'save' feature added - code improvements