@@ -1,40 +1,39 @@
 package github.tdonuk.notemanager.gui.container;
 
 import github.tdonuk.notemanager.constant.Application;
+import github.tdonuk.notemanager.gui.MainWindow;
+import github.tdonuk.notemanager.gui.component.Editor;
 import github.tdonuk.notemanager.gui.constant.EditorShortcut;
+import github.tdonuk.notemanager.gui.constant.EditorState;
+import github.tdonuk.notemanager.util.DialogUtils;
+import github.tdonuk.notemanager.util.StringUtils;
 import lombok.Getter;
 import lombok.NonNull;
+import org.fife.ui.rsyntaxtextarea.SyntaxConstants;
 
 import javax.swing.*;
-import javax.swing.event.ChangeEvent;
-import javax.swing.event.ChangeListener;
 import java.awt.*;
 import java.awt.event.ActionEvent;
 import java.io.File;
+import java.io.IOException;
+import java.nio.file.Files;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Getter
 public class EditorTabPane extends JTabbedPane {
 	private final Map<File, EditorTab> tabs = new HashMap<>();
-	
-	public static EditorTab SELECTED_TAB = null;
 	
 	public EditorTabPane() {
 		super();
 		
 		this.setFont(Application.PRIMARY_FONT);
 		
-		this.addChangeListener(new ChangeListener() {
-			@Override
-			public void stateChanged(ChangeEvent e) {
-				EditorTabPane tabbedPane = (EditorTabPane) e.getSource();
-				
-				SELECTED_TAB = (EditorTab) tabbedPane.getSelectedComponent();
-				System.out.println("selected tab: " + SELECTED_TAB.getTitle());
-			}
+		this.addChangeListener(e -> {
+			EditorTabPane tabbedPane = (EditorTabPane) e.getSource();
+			
+			System.out.println("selected tab: " + tabbedPane.getSelectedComponent().getTitle());
 		});
 		
 		if(tabs.isEmpty()) addTab("New Document");
@@ -60,29 +59,34 @@ public class EditorTabPane extends JTabbedPane {
 		
 		this.add(title, tabToAdd);
 		
-		tabs.put(file, tabToAdd);
+		return tabToAdd;
+	}
+	
+	public EditorTab addTab(@NonNull String title) {
+		title = makeTitleUnique(title);
+		
+		EditorTab tabToAdd = new EditorTab(new File(title+".txt"), title);
+		
+		this.add(title, tabToAdd);
 		
 		return tabToAdd;
 	}
 	
 	@Override
-	public void setTitleAt(int index, String title) {
+	public void setTitleAt(int index, String title) { // updates the tab header component (the small components at the top of the tabbed pane container that has the tab titles in it)
 		setTabComponentAt(index, ((EditorTab) getComponentAt(index)).getHeader());
 	}
 	
 	@Override
 	public Component add(String title, Component component) {
-		Component added = super.add(title, component);
+		EditorTab tab = (EditorTab) component;
+		
+		Component added = super.add(title, tab);
+		tabs.put(tab.getOpenedFile(), tab);
 		
 		setTabComponentAt(indexOfComponent(added), ((EditorTab) added).getHeader());
 		
-		((EditorTab) added).registerKeyboardAction(new AbstractAction() {
-			@Override
-			public void actionPerformed(ActionEvent e) {
-				// TODO: do control for unsaved changes
-				remove(indexOfComponent(added));
-			}
-		}, EditorShortcut.CLOSE.getKeyStroke(), JComponent.WHEN_ANCESTOR_OF_FOCUSED_COMPONENT);
+		initTabShortcuts((EditorTab) added);
 		
 		return added;
 	}
@@ -90,6 +94,8 @@ public class EditorTabPane extends JTabbedPane {
 	@Override
 	public void remove(int index) {
 		if(tabs.size() < 2) return;
+		
+		// TODO: do control for unsaved changes
 		
 		EditorTab toDelete = (EditorTab) getComponentAt(index);
 		
@@ -105,16 +111,71 @@ public class EditorTabPane extends JTabbedPane {
 		}
 	}
 	
-	public EditorTab addTab(String title) {
-		title = makeTitleUnique(title);
+	@Override
+	public EditorTab getSelectedComponent() {
+		return (EditorTab) super.getSelectedComponent();
+	}
+	
+	private void initTabShortcuts(EditorTab tab) {
+		// shortcuts for editor operations. like save, format etc..
 		
-		EditorTab tabToAdd = new EditorTab(new File(title), title);
+		Editor editor = tab.getEditorContainer().getEditorPane().getEditor();
+		File tabFile = tab.getOpenedFile();
+		editor.getActionMap().put(EditorShortcut.FORMAT.getOperation(), new AbstractAction() {
+					@Override
+					public void actionPerformed(ActionEvent e) {
+						System.out.println("formatting " + editor.getSyntaxEditingStyle());
+						if (editor.getText() == null || editor.getText().isBlank()) return;
+						try {
+							if (SyntaxConstants.SYNTAX_STYLE_XML.equals(editor.getSyntaxEditingStyle())) editor.setText(StringUtils.formatXml(editor.getText()));
+						} catch (Exception ex) {
+							throw new RuntimeException(ex);
+						}
+					}
+				}
+		);
 		
-		this.add(title, tabToAdd);
+		editor.getActionMap().put(EditorShortcut.CLOSE.getOperation(), new AbstractAction() {
+					@Override
+					public void actionPerformed(ActionEvent e) {
+						remove(indexOfComponent(tab));
+					}
+				}
+		);
 		
-		tabs.put(tabToAdd.getOpenedFile(), tabToAdd);
-		
-		return tabToAdd;
+		editor.getActionMap().put(EditorShortcut.SAVE.getOperation(), new AbstractAction() {
+					@Override
+					public void actionPerformed(ActionEvent e) {
+						System.out.println("saving " + tabFile.getAbsolutePath());
+						
+						MainWindow.updateState(EditorState.SAVING);
+						
+						try {
+							if(tabFile.canWrite()) {
+								Files.write(tabFile.toPath(), editor.getText().getBytes());
+							}
+							else {
+								File file = DialogUtils.askForSave(tabFile);
+								
+								if(file != null) {
+									if(!file.canWrite()) file.createNewFile();
+									Files.write(file.toPath(), editor.getText().getBytes());
+									
+									EditorTab newTab = addTab(file); // add a new tab with newly created/saved file
+									Editor newEditor = newTab.getEditorContainer().getEditorPane().getEditor();
+									newEditor.setText(Files.readString(file.toPath()));
+									
+									remove(indexOfComponent(tab)); // remove the old tab which is mapped to temp file that does not exist
+								}
+							}
+						} catch(IOException ex) {
+							throw new RuntimeException(ex);
+						}
+						
+						MainWindow.updateState(EditorState.READY);
+					}
+				}
+		);
 	}
 	
 	public EditorTab getTab(File file) {
@@ -122,7 +183,7 @@ public class EditorTabPane extends JTabbedPane {
 	}
 	
 	public List<EditorTab> getTabsWithFileName(String fileName) {
-		return tabs.values().stream().filter(tab -> tab.getOpenedFile().getName().equals(fileName)).collect(Collectors.toList());
+		return tabs.values().stream().filter(tab -> tab.getOpenedFile().getName().equals(fileName)).toList();
 	}
 	
 	public void setSelectedTab(EditorTab tab) {
